--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hex Flipper</title>
+    <title>Colour Flipper || Simple</title>
 
     <!-- styles -->
     <link rel="stylesheet" href="styles.css" />
@@ -12,7 +12,7 @@
 
 <nav>
   <div class="nav-center">
-    <h4>Hex Flipper</h4>
+    <h4>Colour Flipper</h4>
     <ul class="nav-links">
       <li>
         <a href="index.html">Simple</a>
